# anticipating-shadow-points

./: .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  PRIVACY.md  README.md  SECURITY.md  WORKS.md  _config.yml  index.md
benchmark/: .gitignore  PROTOCOL.md  README.md  pyproject.toml
benchmark/runs/published/: README.md
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/: code.json  env.json  manifest.json  report.md
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/adjudication/E1/: GREEN.json  RED.json
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/adjudication/E2/: GREEN.json  RED.json
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/adjudication/E3/: GREEN.json  RED.json
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/adjudication/E4/: GREEN.json  RED.json
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/adjudication/E5/: GREEN.json  RED.json
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/inputs/E1/: GREEN.prompt.txt  RED.prompt.txt
benchmark/runs/published/2026-05-18T00-27-43Z-b0a1bc7b/inputs/E2/: GREEN.prompt.txt  RED.prompt.txt
benchmark/src/asp_benchmark/: __init__.py  __main__.py  adjudicator.py  cli.py  env_fingerprint.py  eval_parser.py  hasher.py  manifest.py  report.py  runner.py
benchmark/tests/: test_adjudicator.py  test_eval_parser.py  test_hasher.py  test_manifest.py
benchmark/tests/fixtures/mock_runs/E1/: GREEN.md  RED.md
benchmark/tests/fixtures/mock_runs/E2/: GREEN.md
benchmark/tests/fixtures/mock_runs/E5/: GREEN.md
(+287 files in other folders)
